@@ -194,7 +194,40 @@
 		</input>
 		<input>/it-autoflight/internal/kts-rate-raw</input>
 		<output>/it-autoflight/internal/kts-rate</output>
-		<filter-time>0.08</filter-time>
+		<filter-time>0.16</filter-time>
+	</filter>
+	
+	<filter>
+		<name>Mach Rate</name>
+		<type>derivative</type>
+		<input>/velocities/mach</input>
+		<output>/it-autoflight/internal/mach-rate-raw</output>
+		<filter-time>1.0</filter-time>
+	</filter>
+	
+	<filter>
+		<name>Mach Rate Gain</name>
+		<type>gain</type>
+		<gain>750</gain>
+		<input>/it-autoflight/internal/mach-rate-raw</input>
+		<output>/it-autoflight/internal/mach-rate-gain</output>
+	</filter>
+	
+	<filter>
+		<name>Mach Rate Lag</name>
+		<type>exponential</type>
+		<input>
+			<condition>
+				<less-than>
+					<property>/velocities/airspeed-kt</property>
+					<value>80</value>
+				</less-than>
+			</condition>
+			<value>0</value>
+		</input>
+		<input>/it-autoflight/internal/mach-rate-gain</input>
+		<output>/it-autoflight/internal/mach-rate</output>
+		<filter-time>0.16</filter-time>
 	</filter>
 	
 	<filter>
@@ -214,7 +247,7 @@
 						<property>/it-autoflight/settings/toga-spd</property>
 						<property>/instrumentation/airspeed-indicator/indicated-speed-kt</property>
 					</difference>
-					<value>0.08</value>
+					<value>0.1</value>
 				</product>
 			</expression>
 		</input>
@@ -231,7 +264,7 @@
 						<property>/it-autoflight/input/mach</property>
 						<property>/instrumentation/airspeed-indicator/indicated-mach</property>
 					</difference>
-					<value>80</value>
+					<value>100</value>
 				</product>
 			</expression>
 		</input>
@@ -242,7 +275,7 @@
 						<property>/it-autoflight/input/kts</property>
 						<property>/instrumentation/airspeed-indicator/indicated-speed-kt</property>
 					</difference>
-					<value>0.08</value>
+					<value>0.1</value>
 				</product>
 			</expression>
 		</input>
@@ -285,7 +318,7 @@
 					</equals>
 				</and>
 			</condition>
-			<value>2.5</value>
+			<value>1.5</value>
 		</max-rate-of-change>
 		<max-rate-of-change>100</max-rate-of-change>
 	</filter>
@@ -1245,141 +1278,105 @@
 		<max-rate-of-change>10000</max-rate-of-change>
 	</filter>
 	
-	<logic>
+	<filter>
+		<name>IT-CONTROLLER: Speed By Pitch Delta</name>
+		<type>gain</type>
+		<gain>
+			<expression>
+				<table>
+					<property>/velocities/airspeed-kt</property>
+					<entry><ind>140</ind><dep> 900</dep></entry>
+					<entry><ind>360</ind><dep>1200</dep></entry>
+				</table>
+			</expression>
+		</gain>
 		<input>
-			<and>
-				<property>/it-autoflight/output/apfd-on</property>
-				<or>
-					<equals>
-						<property>/it-autoflight/output/vert</property>
-						<value>4</value>
-					</equals>
-					<equals>
-						<property>/it-autoflight/output/vert</property>
-						<value>7</value>
-					</equals>
-				</or>
-			</and>
-		</input>
-		<output>/it-autoflight/internal/flch-active</output>
-	</logic>
-	
-	<pid-controller>
-		<name>IT-CONTROLLER: Speed By Pitch</name>
-		<enable>
 			<condition>
-				<property>/it-autoflight/internal/flch-active</property>
+				<equals>
+					<property>/it-autoflight/internal/kts-mach</property>
+					<value>1</value>
+				</equals>
 			</condition>
-		</enable>
+			<property>/it-autoflight/internal/mach-rate</property>
+		</input>
 		<input>/it-autoflight/internal/kts-rate</input>
 		<reference>/it-autoflight/internal/flch-kts-error</reference>
-		<output>/it-autoflight/internal/target-fpm-flch</output>
-		<config>
-			<Kp>
-				<expression>
-					<table>
-						<property>/velocities/airspeed-kt</property>
-						<entry><ind>140</ind><dep>-390</dep></entry>
-						<entry><ind>360</ind><dep>-430</dep></entry>
-					</table>
-				</expression>
-			</Kp>
-			<Ti>1.3</Ti>
-			<Td>0.0</Td>
-			<u_min>
-				<condition>
-					<or>
-						<equals>
-							<property>/gear/gear[1]/wow</property>
-							<value>1</value>
-						</equals>
-						<equals>
-							<property>/gear/gear[2]/wow</property>
-							<value>1</value>
-						</equals>
-					</or>
-				</condition>
-				<value>0</value>
-			</u_min>
-			<u_min>
-				<condition>
-					<equals>
-						<property>/it-autoflight/output/thr-mode</property>
-						<value>2</value>
-					</equals>
-				</condition>
-				<expression>
-					<max>
-						<value>120</value>
-						<difference>
-							<property>/it-autoflight/internal/vert-speed-fpm</property>
-							<value>2000</value>
-						</difference>
-					</max>
-				</expression>
-			</u_min>
-			<u_min>
-				<expression>
-					<difference>
-						<property>/it-autoflight/internal/vert-speed-fpm</property>
-						<value>2000</value>
-					</difference>
-				</expression>
-			</u_min>
-			<u_max>
-				<condition>
-					<or>
-						<equals>
-							<property>/gear/gear[1]/wow</property>
-							<value>1</value>
-						</equals>
-						<equals>
-							<property>/gear/gear[2]/wow</property>
-							<value>1</value>
-						</equals>
-					</or>
-				</condition>
-				<value>1000</value>
-			</u_max>
-			<u_max>
-				<condition>
-					<equals>
-						<property>/it-autoflight/output/thr-mode</property>
-						<value>1</value>
-					</equals>
-				</condition>
-				<expression>
-					<min>
-						<value>-120</value>
-						<sum>
-							<property>/it-autoflight/internal/vert-speed-fpm</property>
-							<value>2000</value>
-						</sum>
-					</min>
-				</expression>
-			</u_max>
-			<u_max>
-				<expression>
-					<sum>
-						<property>/it-autoflight/internal/vert-speed-fpm</property>
-						<value>2000</value>
-					</sum>
-				</expression>
-			</u_max>
-		</config>
-	</pid-controller>
+		<output>/it-autoflight/internal/flch-raw</output>
+		<min>-2000</min>
+		<max>2000</max>
+	</filter>
 	
 	<filter>
-		<name>Speed By Pitch Inactive Sync</name>
+		<name>IT-CONTROLLER: Speed By Pitch Delta Lag</name>
+		<type>exponential</type>
+		<input>/it-autoflight/internal/flch-raw</input>
+		<output>/it-autoflight/internal/flch-lag</output>
+		<filter-time>0.32</filter-time>
+	</filter>
+	
+	<filter>
+		<name>IT-CONTROLLER: Speed By Pitch</name>
 		<type>gain</type>
 		<gain>1.0</gain>
-		<enable>
-			<condition>
-				<not><property>/it-autoflight/internal/flch-active</property></not>
-			</condition>
-		</enable>
-		<input>/it-autoflight/internal/vert-speed-fpm</input>
+		<input>
+			<expression>
+				<sum>
+					<property>/it-autoflight/internal/vert-speed-fpm</property>
+					<property>/it-autoflight/internal/flch-lag</property>
+				</sum>
+			</expression>
+		</input>
 		<output>/it-autoflight/internal/target-fpm-flch</output>
+		<min>
+			<condition>
+				<or>
+					<equals>
+						<property>/gear/gear[1]/wow</property>
+						<value>1</value>
+					</equals>
+					<equals>
+						<property>/gear/gear[2]/wow</property>
+						<value>1</value>
+					</equals>
+				</or>
+			</condition>
+			<value>0</value>
+		</min>
+		<min>
+			<condition>
+				<equals>
+					<property>/it-autoflight/output/thr-mode</property>
+					<value>2</value>
+				</equals>
+			</condition>
+			<value>120</value>
+		</min>
+		<min>-100000</min>
+		<max>
+			<condition>
+				<or>
+					<equals>
+						<property>/gear/gear[1]/wow</property>
+						<value>1</value>
+					</equals>
+					<equals>
+						<property>/gear/gear[2]/wow</property>
+						<value>1</value>
+					</equals>
+				</or>
+			</condition>
+			<value>1000</value>
+		</max>
+		<max>
+			<condition>
+				<equals>
+					<property>/it-autoflight/output/thr-mode</property>
+					<value>1</value>
+				</equals>
+			</condition>
+			<value>-120</value>
+		</max>
+		<max>100000</max>
 	</filter>
 	
 	<filter>
