@@ -7,6 +7,7 @@ I will note if new ITAF tuning or config is required. Simply check the "ITAF CON
 V4.0.8 Beta 4:
 [Control Loop]
 * Added: Internal control drivers for overridable yoke (New config required)
+* Added: New speed on pitch control loop without integrator
 * Added: Ability to not drive throttle directly with autothrottle
 * Added: CWS interrupt ability
 * Added: More flexible bank limit system with overrides (New config required)
